<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="android.view.View" />
        <variable
            name="viewmodel"
            type="com.shaejaz.artigen.bottompanel.BottomPanelViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".bottompanel.EditPattern">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/edit_pattern_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="26dp"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/ic_baseline_edit_24"
                app:tint="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:contentDescription="@string/edit_pattern_btn_desc" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/generate_pattern_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/ic_baseline_auto_awesome_24"
                app:tint="@color/white"
                app:layout_constraintBottom_toTopOf="@+id/edit_pattern_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:contentDescription="@string/generate_pattern_btn_desc" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/linearLayoutCompat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@+id/generate_pattern_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/apply_wallpaper_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="10dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:src="@drawable/ic_baseline_wallpaper_24"
                    app:tint="@color/white"
                    android:visibility="@{viewmodel.showApplyWallpaperButton ? View.VISIBLE : View.GONE}"
                    android:contentDescription="@string/apply_patten_wallpaper_btn_desc" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/share_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginBottom="10dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:src="@drawable/ic_baseline_share_24"
                    app:tint="@color/white"
                    android:visibility="@{viewmodel.showApplyWallpaperButton ? View.VISIBLE : View.GONE}"
                    android:contentDescription="@string/share_pattern_btn_desc" />

            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>

